fix: non-working flex gap on Safari

--- a/src/components/About/SkillsList/SkillsList.module.scss
+++ b/src/components/About/SkillsList/SkillsList.module.scss
@@ -2,5 +2,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 16px 40px;
+  margin: -16px -40px 0 0;
+
+  > div {
+    margin: 16px 40px 0 0;
+  }
 }
